# final_project

./: PairVino.pptx  README.md  config.yaml  pyproject.toml
.virtual_documents/notebook/: xgboost.ipynb
app/: app.py  app_backup.py  app_copy.py
data/clean/: labels_file.csv
notebook/: 1_EDA_initial.ipynb  2_EDA_red.ipynb  3_EDA_white.ipynb  5_1_data_preparation.ipynb  5_2_collaborative_filtering.ipynb  7_xgboost.ipynb  8_lightgbm.ipynb  EDA_cuisine.ipynb  EDA_initial.ipynb  collaborative_filtering.ipynb  collaborative_filtering_second.ipynb  data_preparation.ipynb  data_preparation_second.ipynb  gradientboosting.ipynb  lgb_pairing_model.joblib  lightgbm.ipynb
